# e-invoicing-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  memory.jsonl  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: create-db-functions.mdc  create-rls-policies.mdc  dev_workflow.mdc  postgres-sql-style-guide.mdc  writing-supabase-edge-functions.mdc
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  tasks.json  tasks.json.bak
frontend/: ENVIRONMENT.md  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/clients/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/app/payments/: page.tsx
frontend/src/components/: index.ts
frontend/src/hooks/: index.ts
frontend/src/types/: api.ts  client.ts  index.ts  invoice.ts  payment.ts
src/: main.py
src/database/: __init__.py  crud.py  models.py  storage.py  supabase_client.py
src/routers/v1/: health.py
src/utils/: rate_limiting.py
supabase/: config.toml
supabase/migrations/: 001_create_storage_buckets.sql  002_create_application_tables.sql  003_setup_security_policies.sql
tests/: test_health.py
(+8 files in other folders)
